# spack-community-config

./: .editorconfig  .gitmodules  LICENSE  README.md  pyproject.toml  todo.md
conf/03-site/: config.yaml  modules.yaml  repos.yaml
conf/03-site/linux/: include.yaml  packages.yaml
envs/: .gitignore  makefile
envs/.makefile.incs/spack/: compiler-find.mk  config.mk  gc.mk  make-cli.mk  spack-build.mk  spack-env-deps.mk
envs/03-site/0000-spack-gcc/: spack.yaml
envs/03-site/1000-build-tools/: spack.yaml
envs/03-site/1000-core-packages/: spack.yaml
envs/03-site/1001-cc-aocc/: spack.yaml
envs/03-site/1001-cc-intel-oneapi/: spack.yaml
envs/03-site/1001-cc-llvm/: spack.yaml
envs/03-site/1001-cc-nvhpc/: spack.yaml
envs/03-site/1001-cuda/: spack.yaml
envs/03-site/1002-cc-gcc/: spack.yaml
envs/03-site/1003-runtime/: spack.yaml
envs/03-site/1100-test-cc/: spack.yaml
envs/03-site/1100-test-cc-intel/: spack.yaml
envs/03-site/1100-test-cc-oneapi/: spack.yaml
envs/03-site/2000-aocc-libs/: spack.yaml
envs/03-site/2000-aocc-mpich/: spack.yaml
envs/03-site/2000-aocc-mvapich/: spack.yaml
envs/03-site/2000-aocc-openmpi/: spack.yaml
envs/03-site/2000-cc-common/: spack.yaml
envs/03-site/2000-gcc-impi/: spack.yaml
envs/03-site/2000-gcc-mpich/: spack.yaml
envs/03-site/2000-gcc-mvapich/: spack.yaml
scripts/: install-links.sh
scripts/03-site/: setup-env.sh  setup-envs.sh
templates/: track-load.lua
templates/modules/: anaconda3-modulefile.lua  matlab-modulefile.lua  modulefile.lua  perl-modulefile.lua  r-modulefile.lua  track-load.lua
(+105 files in other folders)
